fixed siganture clipping on 16:9 monitors.

--- a/src/home2.css
+++ b/src/home2.css
@@ -10,6 +10,7 @@
 
 #encouragementToScroll {
   border-radius: 100%;
+  transform: translateY(-5rem);
 }
 
 #home2Container {
